tests/ui/feature-gates/feature-gate-vectorcall.stderr
error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:14:8
   |
LL | extern "vectorcall" fn f() {}
   |        ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:17:12
   |
LL |     extern "vectorcall" fn m();
   |            ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:19:12
   |
LL |     extern "vectorcall" fn dm() {}
   |            ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:24:12
   |
LL |     extern "vectorcall" fn m() {}
   |            ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:28:12
   |
LL |     extern "vectorcall" fn im() {}
   |            ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:31:18
   |
LL | type TA = extern "vectorcall" fn();
   |                  ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the extern "vectorcall" ABI is experimental and subject to change
  --> $DIR/feature-gate-vectorcall.rs:33:8
   |
LL | extern "vectorcall" {}
   |        ^^^^^^^^^^^^
   |
   = note: see issue #124485 <https://github.com/rust-lang/rust/issues/124485> for more information
   = help: add `#![feature(abi_vectorcall)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
